--- a/css/base/fonts.scss
+++ b/css/base/fonts.scss
@@ -1,58 +1,47 @@
 @font-face {
-	font-family: 'Gagalin-Regular';
-	src: url('../fonts/Gagalin-Regular.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "Lifehack";
+  src: url("/css/fonts/lifehack_medium-webfont.woff2") format("woff2"),
+    url("/css/fonts/lifehack_medium-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'Lifehack-Medium';
-	src: url('../fonts/Lifehack-Medium.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'Gagalin';
+  src: url("/css/fonts/gagalin-regular-webfont.woff2") format("woff2"),
+    url("/css/fonts/gagalin-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	src: url('../fonts/Ubuntu-Light.woff') format('woff');
-	font-weight: 300;
-	font-style: normal;
+  font-family: "ubuntubold";
+  src: url("/css/fonts/ubuntu-b-webfont.woff2") format("woff2"),
+    url("/css/fonts/ubuntu-b-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	src: url('../fonts/Ubuntu-Medium.woff') format('woff');
-	font-weight: 500;
-	font-style: normal;
+  font-family: "ubuntulight";
+  src: url("/css/fonts/ubuntu-light-webfont.woff2") format("woff2"),
+    url("/css/fonts/ubuntu-light-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-	font-family: 'Ubuntu';
-	src: url('../fonts/ubuntu-b-webfont.woff') format('woff');
-	font-weight: bold;
-	font-style: normal;
+  font-family: "ubuntumedium";
+  src: url("/css/fonts/ubuntu-light-webfont.woff2") format("woff2"),
+    url("/css/fonts/ubuntu-light-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@mixin gagalin() {
-	font-family: 'Gagalin-Regular', Helvetica, sans-serif;
-}
-
-@mixin ubuntu($style: light) {
-	font-family: 'Ubuntu', Helvetica, sans-serif;
-
-	@if $style == light {
-		font-weight: 300;
-	}
-
-	@if $style == medium {
-		font-weight: 500;
-	}
-
-	@if $style == bold {
-		font-weight: bold;
-	}
-}
-
-@mixin lifehack() {
-	font-family: 'Lifehack-Medium';
+@font-face {
+  font-family: "ubunturegular";
+  src: url("/css/fonts/ubuntu-regular-webfont.woff2") format("woff2"),
+    url("/css/fonts/ubuntu-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
