--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -1,10 +1,16 @@
 .best {
-  background: url('../../img/bg.png') center center no-repeat;
+  background: url("../../img/bg.png") center center no-repeat;
   background-size: cover;
 }
 
 .best__list {
   display: flex;
+}
+
+.best__content {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .best__item {
@@ -15,3 +21,41 @@
   }
 }
 
+.best__img {
+  height: 90px;
+  margin-bottom: 35px;
+}
+
+.best__img--meat {
+  background: url(../../img/meat.png) center center no-repeat;
+}
+
+.best__img--hand {
+  background: url(../../img/hand.png) center center no-repeat;
+}
+
+.best__img--natural {
+  background: url(../../img/natural.png) center center no-repeat;
+}
+
+.best__title {
+  font-family: "Lifehack";
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28.14px;
+  letter-spacing: -0.6px;
+}
+
+.best__text {
+  text-align: center;
+  min-width: 280px;
+}
+
+.best__text--p {
+  font-family: "ubuntulight";
+  font-size: 14px;
+font-weight: 300;
+line-height: 24.02px;
+}
