--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -13,9 +13,9 @@
 .nav__list {
   display: flex;
   text-transform: uppercase;
-  font-family: Ubuntu;
+  font-family: 'ubuntumedium';
 font-size: 13px;
-font-weight: 500;
+font-weight: 700;
 line-height: 30px;
 }
 
@@ -24,8 +24,6 @@ line-height: 30px;
       display: none;
     }
   }
-
-
 
 
 .nav__link {
