--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url('../../img/2-layers.png') center center no-repeat;
+  background: url("../../img/2-layers.png") center center no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
 }
 
 .hero__content {
-  flex: .8;
+  flex: 0.8;
   display: flex;
   align-items: center;
 }
@@ -24,18 +24,20 @@
 }
 
 .hero__text {
+  margin-top: 1px;
   width: 50%;
 }
 
-.section-title {;
-  font-family: 'Gagalin-Regular';
+.section-title {
+  font-family: "Gagalin";
   font-size: 72px;
   font-weight: 400;
   line-height: 85px;
 }
 
 .hero__desc {
-  font-family: "Lifehack - Medium";
+  font-family: "Lifehack";
+  font-size: 65px;
   font-weight: 500;
   letter-spacing: -1.63px;
   line-height: 60px;
