--- a/css/main.scss
+++ b/css/main.scss
@@ -11,9 +11,9 @@ $red: #e35028;
 @import "./base/fonts.scss";
 @import "./base/layout.scss";
 
-
 // blocks
 @import "./blocks/hero.scss";
 @import "./blocks/best.scss";
 @import "./blocks/reviews.scss";
-@import "./blocks/header.scss"
+@import "./blocks/header.scss";
+@import "./blocks/map.scss";
