--- a/css/base/fonts.scss
+++ b/css/base/fonts.scss
@@ -1,47 +1,47 @@
 @font-face {
   font-family: "Lifehack";
-  src: url("/css/fonts/lifehack_medium-webfont.woff2") format("woff2"),
-    url("/css/fonts/lifehack_medium-webfont.woff") format("woff");
+  src: url(fonts/lifehack_medium-webfont.woff2) format("woff2"),
+    url(fonts/lifehack_medium-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gagalin';
-  src: url("/css/fonts/gagalin-regular-webfont.woff2") format("woff2"),
-    url("/css/fonts/gagalin-regular-webfont.woff") format("woff");
+  font-family: "Gagalin";
+  src: url(fonts/gagalin-regular-webfont.woff2) format("woff2"),
+    url(fonts/gagalin-regular-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "ubuntubold";
-  src: url("/css/fonts/ubuntu-b-webfont.woff2") format("woff2"),
-    url("/css/fonts/ubuntu-b-webfont.woff") format("woff");
-  font-weight: normal;
+  font-family: "ubuntu";
+  src: url(fonts/ubuntu-regular-webfont.woff) format("woff2"),
+    url(fonts/ubuntu-b-webfont.woff) format("woff");
+  font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "ubuntulight";
-  src: url("/css/fonts/ubuntu-light-webfont.woff2") format("woff2"),
-    url("/css/fonts/ubuntu-light-webfont.woff") format("woff");
+  src: url(fonts/ubuntu-light-webfont.woff2) format("woff2"),
+    url(fonts/ubuntu-light-webfont.woff) format("woff");
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ubuntu-m";
+  src: url(fonts/ubuntu-light-webfont.woff2) format("woff2"),
+    url(fonts/ubuntu-light-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "ubuntumedium";
-  src: url("/css/fonts/ubuntu-light-webfont.woff2") format("woff2"),
-    url("/css/fonts/ubuntu-light-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "ubunturegular";
-  src: url("/css/fonts/ubuntu-regular-webfont.woff2") format("woff2"),
-    url("/css/fonts/ubuntu-regular-webfont.woff") format("woff");
+  font-family: "ubuntu-r";
+  src: url(fonts/ubuntu-regular-webfont.woff2) format("woff2"),
+    url(fonts/ubuntu-regular-webfont.woff) format("woff");
   font-weight: normal;
   font-style: normal;
 }
