--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -1,6 +1,7 @@
 .best {
-  background: url("../../img/bg.png") center center no-repeat;
+  background: url(../img/bg.png) center center no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 .best__list {
@@ -27,15 +28,15 @@
 }
 
 .best__img--meat {
-  background: url(../../img/meat.png) center center no-repeat;
+  background: url(../img/meat.png) center center no-repeat;
 }
 
 .best__img--hand {
-  background: url(../../img/hand.png) center center no-repeat;
+  background: url(../img/hand.png) center center no-repeat;
 }
 
 .best__img--natural {
-  background: url(../../img/natural.png) center center no-repeat;
+  background: url(../img/natural.png) center center no-repeat;
 }
 
 .best__title {
@@ -54,8 +55,8 @@
 }
 
 .best__text--p {
-  font-family: "ubuntulight";
+  font-family: "ubuntu";
   font-size: 14px;
-font-weight: 300;
-line-height: 24.02px;
+  font-weight: 300;
+  line-height: 24.02px;
 }
