--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("../../img/2-layers.png") center center no-repeat;
+  background: url(../img/2-layers.png) center center no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -7,12 +7,15 @@
 
 .hero__container {
   flex: 1;
+  height: 100vh;
 }
 
 .hero__content {
   flex: 0.8;
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-top: 75px;
 }
 
 .hero__text {
@@ -27,6 +30,7 @@
   margin-top: 1px;
   width: 50%;
 }
+
 
 .section-title {
   font-family: "Gagalin";
