--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -1,3 +1,8 @@
+.reviews {
+  height: 100vh;
+}
+
+
 .reviews__list {
   height: 100%;
   display: flex;
@@ -42,7 +47,7 @@
   margin-right: 33px;
   margin-bottom: 50px;
   margin-left: 20px;
-  font-family: "ubuntulight";
+  font-family: "ubuntu";
   font-size: 14px;
   font-weight: 300;
   line-height: 24px;
