add all sections background

--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -1,5 +1,5 @@
-.map {
+.work {
   height: 100vh;
-  background: url(../../img/map.png);
+  background:url(../../img/BG_.png);
   background-size: cover;
 }
