--- a/css/main.scss
+++ b/css/main.scss
@@ -17,3 +17,8 @@ $red: #e35028;
 @import "./blocks/reviews.scss";
 @import "./blocks/header.scss";
 @import "./blocks/map.scss";
+@import "./blocks/slaider.scss";
+@import "./blocks/team.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/work.scss";
+@import "./blocks/order.scss";
