--- a/css/blocks/slaider.scss
+++ b/css/blocks/slaider.scss
@@ -1,5 +1,5 @@
-.map {
+.slaider {
   height: 100vh;
-  background: url(../../img/map.png);
+  background-color: #f9b43b;
   background-size: cover;
 }
