--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
   height: 100vh;
-  background:url(../../img/photo-1428660386617-8d277e7deaf2.png);
+  background:url(../img/photo-1428660386617-8d277e7deaf2.png);
   background-size: cover;
 }
