--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -1,5 +1,51 @@
 .team {
   height: 100vh;
-  background:url(../img/SBS_1255-X2.png);
+  background: url(../img/SBS_1255-X2.png);
   background-size: cover;
+}
+
+.team-container {
+  display: flex;
+  align-items: flex-end;
+  margin-right: 0px;
+}
+
+.team-background {
+  position: absolute;
+  height: 100vh;
+  width: 50vw;
+  background: rgba(#454545, 0.7);
+}
+
+.section-team {
+  margin-top: 110px;
+}
+
+.team-content__acardeon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 330px;
+}
+
+.team-content__name {
+  color: #f9b43b;
+  font-family: Gagalin;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 17px;
+}
+
+.team-content__acarden--info {
+  display: flex;
+  
+  color: #ffffff;
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.team-content__img {
+  margin-right: 20px;
 }
