--- a/css/main.css
+++ b/css/main.css
@@ -677,7 +677,7 @@ footer {
   -ms-flex-line-pack: center;
   align-content: center;
   margin-right: 33px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   margin-left: 20px;
   font-family: "ubuntu";
   font-size: 14px;
@@ -700,6 +700,9 @@ footer {
   object-fit: cover;
   height: 100%;
   width: 100%; }
+
+.btn-review {
+  margin-bottom: 50px; }
 
 .header {
   position: absolute;
@@ -783,6 +786,57 @@ footer {
   height: 100vh;
   background: url(../img/SBS_1255-X2.png);
   background-size: cover; }
+
+.team-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  margin-right: 0px; }
+
+.team-background {
+  position: absolute;
+  height: 100vh;
+  width: 50vw;
+  background: rgba(69, 69, 69, 0.7); }
+
+.section-team {
+  margin-top: 110px; }
+
+.team-content__acardeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 330px; }
+
+.team-content__name {
+  color: #f9b43b;
+  font-family: Gagalin;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 17px; }
+
+.team-content__acarden--info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #ffffff;
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: 300; }
+
+.team-content__img {
+  margin-right: 20px; }
 
 .menu {
   height: 100vh;
